--- a/CSS-Foundations/foundations/flex/02-flex-header/style.css
+++ b/CSS-Foundations/foundations/flex/02-flex-header/style.css
@@ -23,3 +23,17 @@ a {
   /* this removes the line under the links */
   text-decoration: none;
 }
+
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 8px;
+}
+
+.left,
+.right {
+  display: flex;
+  padding: 0px;
+  gap: 8px;
+}
