--- a/CSS-Foundations/foundations/flex/03-flex-header-2/style.css
+++ b/CSS-Foundations/foundations/flex/03-flex-header-2/style.css
@@ -46,3 +46,24 @@ a {
 ul {
   list-style-type: none;
 }
+
+.header,
+.left,
+.right{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 16px;
+}
+
+.header {
+  padding: 8px;
+}
+
+ul {
+  display: flex;
+  justify-content: space-between;
+  padding: 0px;
+  margin: 0px;
+  gap: 16px;
+}
