--- a/CSS-Foundations/foundations/flex/05-flex-modal/style.css
+++ b/CSS-Foundations/foundations/flex/05-flex-modal/style.css
@@ -67,3 +67,31 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+.modal {
+  display: flex;
+  padding: 16px;
+  gap: 16px;
+}
+
+.icon {
+  flex-shrink: 0;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 8px;
+  align-items: center;
+}
+
+.text {
+  margin-bottom: 16px;
+}
+
+/*
+* {
+  border: 1px solid red;
+}
+*/
