--- a/CSS-Foundations/foundations/flex/06-flex-layout/style.css
+++ b/CSS-Foundations/foundations/flex/06-flex-layout/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
-
+/*
+  text-decoration: none;
+*/
 body {
   height: 100vh;
   margin: 0;
@@ -23,4 +25,46 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+button {
+  padding: 8px 16px;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+}
+
+a {
+  /*removes underline on hyperlinks*/
+  text-decoration: none;
+  color: rgb(99, 99, 99);
+}
+
+.footer,
+.header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer {
+  background-color: #eee;
+}
+
+ul{
+  display: flex;
+  justify-content: space-between;
+    /*removes bullets on list items*/
+  list-style: none;
+  padding: 0px 15px;
+  gap: 16px;
 }
